fix up overflow on menu causing 'jumpiness' in ios -- 💖 🐥 CC 😏

--- a/assets/app/css/blocks/_navigation.scss
+++ b/assets/app/css/blocks/_navigation.scss
@@ -1,4 +1,12 @@
     
+
+
+    body.navIsOpen {
+
+        overflow: hidden;
+
+    }
+
     .nav {
         
         text-transform: lowercase;
