--- a/assets/app/css/blocks/_posts.scss
+++ b/assets/app/css/blocks/_posts.scss
@@ -112,7 +112,7 @@
             color: $simeycolor;
             opacity: 0;
 
-            transition: all 1.5s ease-in;
+            transition: opacity 1.5s $cubicIn, transform 0.1s linear 1.5s;
             transform: translateY(0.1em) scale(0.5) rotate(-90deg);
 
         }
@@ -140,9 +140,11 @@
         &--filled {
 
             opacity: 1;
-            transition-timing-function: ease-out;
-            transition-duration: 0.22s;
             transform: scale(1);
+
+            transition-timing-function: $cubicOut, $cubicOut;
+            transition-duration: 0.22s, 0.22s;
+            transition-delay: 0s;
 
         }
     }
